Fixed an issue with the drop dpwn menu on the navigation bar. It would hide behind the background image. Also made fixed a small issue where the Save button in the photo gallery would not do anything. It now brings you back to the previous trips page.

--- a/application/public/css/home.css
+++ b/application/public/css/home.css
@@ -2,7 +2,7 @@
 *{
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 
@@ -12,7 +12,6 @@
 .background-img{
     width: 100%;
     height: 1100px;
-
 }
 
 /* All the text elements that have a class of "text" will have the following style */
@@ -57,6 +56,12 @@
     color: white;
 
 }
+
+/* .home-intro{
+    position: absolute;
+    color: white;
+    top: 10%;
+} */
 
 /* Styling for the container that holds all the elements that have to do with searching on the home page. */
 .search-section{
